--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Scheme Generator</title>
     <link rel="stylesheet" href="style.css">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 </head>
 <body>
     <main>
@@ -31,11 +37,19 @@
         </div>
 
         <div class="colors" id="colors">
-            <div class="color-1" id="color-1">#F55F5A</div>
-            <div class="color-2" id="color-2">#2B283A</div>
-            <div class="color-3" id="color-3">#FBF3AB</div>
-            <div class="color-4" id="color-4">#AAd1B6</div>
-            <div class="color-5" id="color-5">#A626D3</div>
+            <div class="color-1" id="color-1"></div>
+            <div class="color-2" id="color-2"></div>
+            <div class="color-3" id="color-3"></div>
+            <div class="color-4" id="color-4"></div>
+            <div class="color-5" id="color-5"></div>
+        </div>
+
+        <div class="colors">
+            <p class="text" id="text-1">#F55F5A</p>
+            <p class="text" id="text-2">#2B283A</p>
+            <p class="text" id="text-3">#FBF3AB</p>
+            <p class="text" id="text-4">#AAd1B6</p>
+            <p class="text" id="text-5">#A626D3</p>
         </div>
         </form>
     </main>
