added copied to clipboard functionality and updated styling.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <p class="text" id="text-1">#F55F5A</p>
             <p class="text" id="text-2">#2B283A</p>
             <p class="text" id="text-3">#FBF3AB</p>
-            <p class="text" id="text-4">#AAd1B6</p>
+            <p class="text" id="text-4">#AAD1B6</p>
             <p class="text" id="text-5">#A626D3</p>
         </div>
-        </form>
+    </form>
     </main>
 
     <script src="script.js"></script>
